--- a/Next-Gen_VietNam-master/project/testPost.html
+++ b/Next-Gen_VietNam-master/project/testPost.html
@@ -6,15 +6,24 @@
         <script src="https://www.gstatic.com/firebasejs/5.0.3/firebase-firestore.js"></script>
 		</head>
 		<style>
-			.container{
-				position:relative;
-				margin: 0 auto;
-				width: 80%;
-			} postsList
+			.container {
+				max-width: 925px;
+				left:250px;
+				position:absolute;
+				border-right:1px solid	#DCDCDC;
+			}
 		</style> 
 		<body>
-	
+			<div class='container'>
+				<h3>
+
+				</h3>
+				
+			</div>
 		</body>
+		<div id="sidePostSection">
+			<div style="font-size:30px;float:left;border-bottom:1px solid red;">You may also like:</div>
+		</div>
 		  <script>
             // Initialize Firebase
             var config = {
