--- a/Next-Gen_VietNam-master/project/projectnextgen-about.html
+++ b/Next-Gen_VietNam-master/project/projectnextgen-about.html
@@ -15,14 +15,14 @@
 			}
 		</style>
 		<body>
-			<div class="icon-bar ">
-			  <a class="active" href="index.html" style="float: left;"><i class="fa fa-home"></i></a> 
-			  <a href="#new" style="float: left;">Newest</a>
-			  <a href="#favourites" style="float: left;">Favourites</a>
-			  <a href="projectnextgen-more.html" style="float: left;">All guide</a>
-			  <a href="projectnextgen-about.html" style="float: right;">Contact</a>
-			  <a href="#about" style="float: right;background-color:blue;">About</a>
-			</div>
+				<div class="icon-bar ">
+						<<a href="index.html">
+								<img class='logo' src="imgs/logo-magic.png" >
+						</a>
+						<a href="#contact" style="float: right;">Contact</a>
+						<a href="projectnextgen-about.html" style="float: right;">About</a>	
+						<a href="projectnextgen-more.html" style="float: right;">All guide</a>
+				</div>
 			<div class="container">
 				<h1 class="heading">General</h1>
 				<p>Our newest site "VNGUIDE "will provide you some of the best tips and tricks about travelling to Vietnam-A beautiful and cultural country.This website will make your trip to Vietnam a lot more fun,exciting and memorable.</p>
