--- a/Next-Gen_VietNam-master/project/projectnextgen-more.html
+++ b/Next-Gen_VietNam-master/project/projectnextgen-more.html
@@ -2,7 +2,11 @@
 	<html>
 		<head>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">	
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+		<script src="https://www.gstatic.com/firebasejs/5.0.3/firebase-app.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/5.0.3/firebase-firestore.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>	
 		<link rel="stylesheet" type="text/css" href="projectnextgencss.css">
 		</head>
 		
@@ -11,29 +15,44 @@
 			position:relative;
 			margin: 0 auto;
 			width: 80%;
+			
 		}
 		</style>
 		
 		<body>
-			<div class="icon-bar ">
-			  <a class="active" href="index.html" style="float: left;"><i class="fa fa-home"></i></a> 
-			 <a href="#new" style="float: left;">Newest</a>
-			  <a href="#favourites" style="float: left;">Favourites</a>
-			  <a href="projectnextgen-more.html" style="float: left;background-color:blue;">All guide</a>
-			  <a href="#contact" style="float: right;">Contact</a>
-			  <a href="projectnextgen-about.html" style="float: right;">About</a>
-			</div>
+				<div class="icon-bar ">
+						<a href="index.html">
+								<img class='logo' src="imgs/logo-magic.png" >
+						</a>
+					
+						<a href="#contact" style="float: right;">Contact</a>				
+						<a href="projectnextgen-about.html" style="float: right;">About</a>	
+						<a href="projectnextgen-more.html" style="float: right;">All guide</a>
+				</div>
 			
 			<div class="container">
-				<div id="section">
-					<h1 id="sectionTitle">All Guides</h1>
-					</div>
-					
-					</div>
-				</div>
+					<ul id="section">
+					<h1 id="sectionTitle">All Guide</h1>
+				</ul>
+			</div>
 		</body>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 		<script  rel="javascript" type="text/javascript" src="projectnextgenjavascript.js"></script>
+		<script>
+				// Initialize Firebase
+				var config = {
+					apiKey: "AIzaSyBVdD2sNtC42X0Iv96neMu-mOHDoPcZsEQ",
+					authDomain: "vietnamguide-minh.firebaseapp.com",
+					databaseURL: "https://vietnamguide-minh.firebaseio.com",
+					projectId: "vietnamguide-minh",
+					storageBucket: "vietnamguide-minh.appspot.com",
+					messagingSenderId: "109746609160"
+				};
+				firebase.initializeApp(config);
+				const db = firebase.firestore();
+				db.settings({ timestampsInSnapshots: true }); 
+			</script>
+			<script src="app.js"></script>
 	</html>
